2002-10-16  James Willcox  <jwillcox@gnome.org>

	* libgnomeui/gnome-icon-lookup.c: (get_icon_name):
	Make it so you can get the icon for a directory, even if
	there is no GnomeVFSFileInfo available.

2002-10-15  Paolo Maggi  <maggi@athena.polito.it>

	* libgnomeui/gnome-entry.c (gnome_entry_save_history): save the list in
	the right way, i.e. not reversed

2002-10-15  Anders Carlsson  <andersca@gnu.org>

	* configure.in (LIBGNOMEUI_COMPONENTS_CFLAGS): Require pango 1.1.2

	* libgnomeui/gnome-icon-item.c (update_pango_layout): Use 
	PANGO_WRAP_WORD_CHAR.

2002-10-14  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release libgnomeui 2.1.1

2002-10-08  Paolo Maggi  <maggi@athena.polito.it>

	* libgnomeui/gnome-entry.h: removed duplicated gnome_entry_get_history_id
	entry

	* libgnomeui/gnome-entry.c (entry_activated): don't save the history, it is
	already saved by gnome_entry_prepend_history
	(gnome_entry_set_history_id: added documentation and a warning in the case
	the user tries to modify an already existing id
	(gnome_entry_get_history_id)(gnome_entry_set_max_saved): fixed doc
	(gnome_entry_add_history): remove duplicates and save the history list if
	needed
	(gnome_entry_prepend_history)(gnome_entry_append_history): fixed doc,
	check parameters
	(gnome_entry_load_history)(gnome_entry_save_history): s/g_assert/g_return_if_fail
	(gnome_entry_clear_history): fixed doc, save the history list

	Bug #91780 fixed.
	Bug #87377 partially fixed.

2002-10-09  Dave Camp  <dave@ximian.com>

	* libgnomeui/gnome-druid.c (gnome_druid_instance_init): Grab the
	focus on the next button rather than just setting the HAS_FOCUS
	flag.

2002-10-10  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-thumbnail.c (gnome_thumbnail_factory_ensure_uptodate):
	Fix shortcut to avoid stat:ing thumbnail dir a lot.

	* libgnomeui/gnome-icon-theme.c (gnome_icon_theme_rescan_if_needed):
	Implement rescanning

2002-10-04  Vladimir Vukicevic  <vladimir@pobox.com>
